--- a/local/pressure-washing-tickhill.html
+++ b/local/pressure-washing-tickhill.html
@@ -147,7 +147,7 @@ Choosing a <strong>local pressure washing company in Tickhill Doncaster</strong>
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
 title="Driveway pressure washing in Tickhill">
-professional driveway pressure washing services in Tickhill Doncaster FAQS"></a></p>
+professional driveway pressure washing services in Tickhill Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Clean block paved driveway after professional pressure washing in Tickhill Doncaster"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -172,7 +172,7 @@ A freshly <strong>pressure washed patio</strong> adds value and comfort to your 
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
 title="Patio and paving  pressure cleaning in Tickhill">
-professional patio pressure washing services Tickhill Doncaster FAQS"</a></p>
+professional patio pressure washing services Tickhill Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Stone patio restored with pressure washing in Tickhill Doncaster garden"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
