--- a/test-gut.html
+++ b/test-gut.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title>Home Repairs Doncaster - Guttering, Painting, uPVC & Pressure Washing - Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/">
+<link rel="canonical" href="https://homerepairs4u.com/test-gut.html">
 <meta name="description" content="Home Repairs 4U provides internal home repairs, gutter cleaning and repairs, exterior painting, uPVC Restoration, window cleaning, and pressure washing across Doncaster, Askern, Bentley, Campsall, Adwick-Le-Street and surrounding areas. Call today for reliable local service.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
