--- a/test-gut.html
+++ b/test-gut.html
@@ -143,33 +143,17 @@ nav ul.menu li ul.submenu { position: static; }
 }
 </style>
 </header>
-<style>
-/* BLACK MENU */
-nav { background: #000; }
+ <!-- MENU PLACEHOLDER -->
+<div id="menu-placeholder"></div>
 
-nav ul.menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; }
+<script>
+fetch('menu.html')
+.then(response => response.text())
+.then(data => {
+document.getElementById('menu-placeholder').innerHTML = data;
+});
+</script>
 
-nav ul.menu li { position: relative; }
-
-nav ul.menu li a { display: block; padding: 15px 25px; color: #fff; text-decoration: none; font-weight: bold; }
-
-nav ul.menu li a:hover { background: #333; }
-
-/* Dropdown */
-nav ul.menu li ul.submenu { display: none; position: absolute; top: 100%; left: 0; background: #000; min-width: 180px; flex-direction: column; z-index: 1000; }
-
-nav ul.menu li:hover ul.submenu { display: block; }
-
-nav ul.menu li ul.submenu li a { padding: 12px 20px; }
-
-nav ul.menu li ul.submenu li a:hover { background: #444; }
-
-/* Mobile */
-@media (max-width: 600px) {
-nav ul.menu { flex-direction: column; }
-nav ul.menu li ul.submenu { position: static; }
-}
-</style>
 
  <!-- ✅ MAIN CONTENT -->
 <main style="max-width:1200px; margin:30px auto; padding:0 15px;">
