--- a/test-gut.html
+++ b/test-gut.html
@@ -144,7 +144,7 @@ nav ul.menu li ul.submenu { position: static; }
 </style>
 </header>
  <!-- MENU PLACEHOLDER -->
-<div id="menu-placeholder"></div>
+<div id="menu-placeholder" style="min-height:60px;"></div>
 
 <script>
 fetch('menu.html')
