--- a/menu.html
+++ b/menu.html
@@ -1,18 +1,24 @@
 <nav>
 <ul class="menu">
-<li><a href="index.html">Home</a></li>
 <li>
 <a href="#">Services</a>
 <ul class="submenu">
-<li><a href="webdesign.html">Web Design</a></li>
-<li><a href="development.html">Development</a></li>
-<li><a href="guttering.html">Guttering</a></li>
-<li><a href="painting.html">Exterior Painting</a></li>
-<li><a href="upvc.html">uPVC Restoration</a></li>
-<li><a href="pressure-washing.html">Pressure Washing</a></li>
+<li>
+<a href="pressure-washing.html">Pressure Washing</a>
+<ul class="submenu">
+<li><a href="driveways.html">Driveways</a></li>
+<li><a href="patios.html">Patios</a></li>
 </ul>
 </li>
-<li><a href="about.html">About</a></li>
+<li>
+<a href="guttering-services.html">Guttering Services</a>
+<ul class="submenu">
+<li><a href="cleaning.html">Cleaning</a></li>
+<li><a href="repairs.html">Repairs</a></li>
+</ul>
+</li>
 <li><a href="contact.html">Contact</a></li>
+</ul>
+</li>
 </ul>
 </nav>
